--- a/views/noOpen.html
+++ b/views/noOpen.html
@@ -9,7 +9,7 @@
     <title>暂无开通权限</title>
     <style>
         *{padding:0;margin:0;}
-        .tc{text-align: center;    position: absolute;}
+        .tc{text-align: center;      margin-top: 50%;}
         html,body{width:100%;height: 100%;font-size: 1rem;color:#666;}
         .center-box{
             height: 100%;
@@ -18,26 +18,10 @@
             /* 水平居中*/
             width:100%;
             height: 100%;
-            display: -moz-box;
-            display: -moz-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-align: center;
-            -moz-box-align: center;
-            -ms-flex-pack:center;/* IE 10 */
-            -webkit-justify-content: center;
-            -moz-justify-content: center;
-            justify-content: center;/* IE 11+,Firefox 22+,Chrome 29+,Opera 12.1*/
-            /* 垂直居中 */
-            -webkit-box-pack: center;
-            -moz-box-pack: center;
-            -ms-flex-align:center;/* IE 10 */
-            -webkit-align-items: center;
-            -moz-align-items: center;
-            align-items: center;
+            
         }
         /* 动画 */
-        @keyframes warn {  
+       @keyframes warn {  
     0% {  
         transform: scale(0);  
         opacity: 0.0;  
