--- a/views/tbplay.html
+++ b/views/tbplay.html
@@ -12,12 +12,20 @@
     <script type="text/javascript" src="http://yuntv.letv.com/bcloud.js"></script>
     <style>
         *{padding:0;margin:0;}
-        .videos{width:100%;height:auto;}
+        .videos{width:100%;height:auto;margin-top: 2rem;}
+        .header{width: 100%; background-color: #25C2B7;padding: 0.5rem 0 0.5rem 1rem;position: fixed;
+                top: 0;
+                left: 0;
+                z-index: 100;
+            }
+        .header img{width:5rem;}
     </style>
 </head>
 <body>
     <header>
-        
+        <div class="header">
+            <img src="logo-small.png" alt="">
+        </div>
     </header>
     <div class="videos" id="videoPlayer">
         
